Add 2 fragments for sample.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="nt.son.sonlevel.MainActivity">
+    <LinearLayout android:layout_width="match_parent" android:layout_height="0dp"
+                  android:layout_weight="1"
+                  android:background="@color/gainsboro"
+                  android:orientation="vertical">
+        <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hello World!"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:text="Feature 1"
+                android:id="@+id/feature1"/>
 
-</android.support.constraint.ConstraintLayout>
+        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:text="Feature 2"
+                android:id="@+id/feature2"/>
+
+    </LinearLayout>
+    <LinearLayout android:layout_width="match_parent" android:layout_height="0dp"
+                  android:layout_weight="1"
+                  android:padding="4dp"
+                  android:background="@color/violet"
+                  android:orientation="horizontal">
+
+        <FrameLayout android:layout_width="0dp"
+                     android:id="@+id/first_container"
+                     android:layout_height="match_parent"
+                     android:padding="4dp"
+                     android:layout_weight="1"/>
+
+        <FrameLayout android:layout_width="0dp"
+                     android:id="@+id/second_container"
+                     android:layout_height="match_parent"
+                     android:padding="4dp"
+                     android:layout_weight="1"/>
+
+
+    </LinearLayout>
+
+
+</LinearLayout>
